<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="5dp"
    android:background="@drawable/grad8">

    <TextView style="@style/white1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/fvii"
        android:id="@+id/textView4"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="48dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView style="@style/white1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/roi"
        android:id="@+id/textView5"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="15dp"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true" />

    <TextView style="@style/white1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/nop"
        android:id="@+id/textView6"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/spinner3"
        android:layout_alignParentStart="true" />

    <TextView style="@style/white1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/cvi"
        android:id="@+id/cvi"
        android:layout_below="@+id/btnCal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp" />

    <EditText style="@style/white1"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/txtCV"
        android:hint="Example:12000"
        android:textColorHint="#b6b4b4"
        android:backgroundTint="@android:color/white"
        android:layout_alignBottom="@id/textView4"
        android:layout_toEndOf="@id/textView4"
        android:layout_marginLeft="50dp"/>

    <EditText style="@style/white1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/txtROI"
        android:hint="Ex:0.02"
        android:textColorHint="#b6b4b4"
        android:layout_alignBottom="@+id/spinner3"
        android:layout_toEndOf="@+id/spinner3"
        android:layout_marginLeft="35dp"
        android:backgroundTint="@android:color/white"/>

    <EditText style="@style/white1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/txtNOP"
        android:hint="Ex:2,3"
        android:textColorHint="#b6b4b4"
        android:layout_alignBottom="@+id/spinner6"
        android:layout_toEndOf="@+id/spinner6"
        android:layout_marginLeft="5dp"
        android:backgroundTint="@android:color/white"/>

    <EditText style="@style/white1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/txtSI"
        android:backgroundTint="@android:color/white"
        android:layout_below="@+id/cvi"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cal"
        android:id="@+id/btnCal"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="pvm" />

    <Spinner style="@style/white1"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:id="@+id/spinner3"
        android:entries="@array/options_x"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignEnd="@+id/btnCal"
        android:backgroundTint="@android:color/white"/>

    <Spinner style="@style/white1"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:id="@+id/spinner6"
        android:entries="@array/options_y"
        android:layout_alignTop="@+id/textView6"
        android:layout_toEndOf="@+id/textView6"
        android:layout_marginLeft="5dp"
        android:backgroundTint="@android:color/white"/>

</RelativeLayout>